GNOME Bugzilla – Bug 732694
glimagesink: handle drain query
Last modified: 2014-11-12 12:17:56 UTC
Created attachment 279849 [details] [review] glimagesink: release stored buffer on drain query gst-launch-1.0 filesrc location=speedway_raw.h264 ! h264parse ! omxh264dec ! glimagesink With attached patch you get https://drive.google.com/file/d/0Bw6t368wtIMYMnM5TTBnQkdCMm8/edit?usp=sharing The stream file: https://drive.google.com/file/d/0Bw6t368wtIMYNFVsdXZheVd6Y00/edit?usp=sharing (I had to set enable-last-sample=0 because I do not have the patche for GstBaseSink about the drain query here. So no need it on current master)
I think we need this patch but not sure it still applies with current upstream. For the story I remember having pushed this in eglglessink but since it has been removed we need this in glimagesink.
Review of attachment 279849 [details] [review]: You'll also need to clear the buffer in glimage_sink->upload using gst_gl_upload_release_buffer ()
Ah thx, I will also try to make a unit test.
commit 004a414b4a938c0523bed9c5a9c81675c6fdf665 Author: Julien Isorce <j.isorce@samsung.com> Date: Tue Nov 11 23:49:59 2014 +0000 glimagesink: release stored buffers on drain query Fixes https://bugzilla.gnome.org/show_bug.cgi?id=732694 commit 7d0de0577ad11694adc137d89f63bc68da83e1d3 Author: Julien Isorce <j.isorce@samsung.com> Date: Tue Nov 11 23:43:42 2014 +0000 gl: do not raise a critical msg if the backend does not handle window events Fix "assertion 'window_class->handle_events != NULL' failed" if not using a X11 window.
commit 7bb1ea7094933a73845aeeef0694270320f2dced Author: Julien Isorce <j.isorce@samsung.com> Date: Tue Nov 11 23:54:44 2014 +0000 gl: add unit test that checks for glimagesink drain query handling Fixes https://bugzilla.gnome.org/show_bug.cgi?id=732694
commit 5c48440c9a8e1dbba3f7c11f4ab4408973f64684 Author: Matthew Waters <matthew@centricular.com> Date: Wed Nov 12 11:44:07 2014 +1100 glimagesink: don't set the upload to NULL on the drain query https://bugzilla.gnome.org/show_bug.cgi?id=732694
commit 92796446a23bae05cf3fd70cfe161f04e0dac980 Author: Julien Isorce <j.isorce@samsung.com> Date: Wed Nov 12 09:41:53 2014 +0000 tests: add CFLAGS and LADD for glimagesink unit test Fixes https://bugzilla.gnome.org/show_bug.cgi?id=732694