glimagesink: release stored buffers on drain query

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=732694